chore: add comment to netlify.toml to force Netlify to re-read the file and trigger redeploy

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
+# Trigger Netlify to re-read this file
 [build]
-  command = "pnpm build"
+  command = "npx prisma generate && pnpm build"
   publish = ".next"
 
 [[plugins]]
