--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
+    "nodemailer": "^7.0.3",
     "path": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
@@ -67,6 +68,7 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.11.2",
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
